--- a/index.html
+++ b/index.html
@@ -14,7 +14,61 @@
     <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
   </header>
   <main>
-    <!-- Student code goes here -->
+    <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>HyperText Markup Language, or HTML, is the most basic building block of websites. It handles the content of
+          a website, as well as its structure and the meaning of each element on the page. Along with CSS and
+          JavaScript, HTML is one of the three core languages of the web.
+        </li>
+        <li>HTML = CONTENT IN WEBSITE - TEXT, IMAGES, BUTTONS, LINKS
+        </li>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
+        <li>Elements that are nested inside other elements are called child elements. If there are three elements nested
+          inside of a
+
+          <body> element, those three nested elements are known as child elements. The element that holds all the
+            children—in this case, the
+
+            <body> element—is known as the parent element. This “parent/child” language is often used by developers to
+              explain the relationship among elements in HTML.
+        </li>
+      </ul>
+
+    </section>
+
+    <section class="card" id="css-section">
+      <h2>CSS</h2>
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+
+    </section>
+
+    <section class="card" id="git-section">
+      <h2>Git</h2>
+      <ul>
+        <li>git status: checks what branch we are currently on</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>git add-A The add command adds modifications in the current working branch to the staging area. The -A flag
+          indicates that we want to add all changes. The staging area informs Git that the changes will be added in the
+          next commit.
+        </li>
+        <li>enter the git commit command with a commit message that describes what the commit contains. Enter the
+          following git command in the command line: git commit -m "descriptive message"
+        </li>
+      </ul>
+
+    </section>
+
+    <section class="card" id="javascript-section">
+      <h2>JavaScript</h2>
+      <ul>
+        <li>Enter your JavaScript notes here</li>
+      </ul>
+
+    </section>
   </main>
 
   <footer>
