--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/style.css">
   <title>Prework Study Guide</title>
 </head>
 
@@ -41,8 +42,20 @@
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS
+          style sheet.</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
       </ul>
+      <li>A padding indicates how much space we want around the content inside an element.</li>
+      <li>Declarations contain two important components: the CSS property we want to apply and the value of the
+        property. For example, the declaration color: blue; includes the CSS property color and the value for that
+        property, blue.
+      </li>
+      <li>The period preceding card designates this as a class selector. Any HTML element assigned to the class, card,
+        will gain these property assignments from the CSS.
+      </li>
+      <li>The padding property adds space around the content inside an element. When you increase padding, you are
+        actually making the entire element bigger.</li>
 
     </section>
 
@@ -51,8 +64,10 @@
       <ul>
         <li>git status: checks what branch we are currently on</li>
         <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-        <li>git add-A The add command adds modifications in the current working branch to the staging area. The -A flag
-          indicates that we want to add all changes. The staging area informs Git that the changes will be added in the
+        <li>git add-A The add command adds modifications in the current working branch to the staging area. The -A
+          flag
+          indicates that we want to add all changes. The staging area informs Git that the changes will be added in
+          the
           next commit.
         </li>
         <li>enter the git commit command with a commit message that describes what the commit contains. Enter the
