--- a/index.html
+++ b/index.html
@@ -81,7 +81,26 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>Arrays are useful tools for storing multiple items with different data types in a single variable, but not
+          all arrays must have multiple data types.
+        </li>
+        <li>In JavaScript and many other programming languages, arrays are zero-indexed and sequential. This means that
+          the first item in any array has an index of 0, not 1. The indices, or location identifiers, will always be
+          whole numbers that increase by 1 each time.
+        </li>
+        <li>A "for" loop uses the predictable pattern of indices to perform a task on all the items in an array by
+          allowing a single code block to be executed over and over. Developers must use another statement, such as the
+          conditional if statement that we just learned, to interrupt the control flow by executing a block of code a
+          specific number of times.
+        </li>
+        <li>A function is different from a for loop or conditional statement because functions do not automatically
+          execute when the JavaScript file (in our case, script.js) is run. Instead, you must call a function by name in
+          order to execute it</li>
+
+        <li>Being able to call a function to execute it also means you can control where in the control flow a task is
+          executed, or if it is executed at all</li>
       </ul>
 
     </section>
